# mayapy-launcher

./: README.md  pyproject.toml
mayapy_launcher/: __init__.py
