[tool.poetry]
name = "mayapy-launcher"
version = "0.1.0"
description = "Easily launch any version of mayapy"
authors = ["Loïc Pinsard <muream@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.scripts]
mayapy = "mayapy_launcher:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
